--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-EtherPlan is a pun to EtherPad, using meteor technology to make a real time colaboration planning.
+EtherPlan allow planning in real time, 
+with people working together, 
+remotly over a web space, 
+use meteor technology.
